kubernetes_files/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - name: express-app
        image: ghcr.io/jureh/lunch-buddy-express:latest
        ports:
          - containerPort: 3000
