kubernetes_files/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app
  labels:
    app: angular-app
spec:
  ports:
    - port: 80
  selector:
    app: angular-app
