kubernetes_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - essa-vm-08.lrk.si
      secretName: tls-secret
  rules:
    - host: essa-vm-08.lrk.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-app
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: express-app
                port:
                  number: 3000
